infrastructure/ingress/api-gateway-ingress-test.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-test
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/limit-rps: "30"
    nginx.ingress.kubernetes.io/limit-connections: "15"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  ingressClassName: nginx
  rules:
    - host: api-test.local
      http:
        paths:
          - path: /payments(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payments-api
                port:
                  number: 8080
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-api
                port:
                  number: 8080
          - path: /gateway(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gateway-api
                port:
                  number: 8080
          - path: /healthz
            pathType: Exact
            backend:
              service:
                name: gateway-api
                port:
                  number: 8080
